# eo-science-course

./: 00_introduction_to_python_for_earth_observation.ipynb  01_soil_moisture_validation.ipynb  README.md  postBuild  setup.cfg
