[metadata]
name = eo_science_course
description = Dependencies for jupyter notebooks of the EO science course.
author = TU Wien GEO MRS group
author_email = remote.sensing@geo.tuwien.ac.at
long_description = file: README.md
platforms = any
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
install_requires =
    xarray
    jupyter

[options.packages.find]
where = src

